--- a/src/style/blocks/pageFooter/topFooter.scss
+++ b/src/style/blocks/pageFooter/topFooter.scss
@@ -5,7 +5,7 @@
   }
   &__inner {
     display: block;
-    margin: 10px 0 0 0; //margin:58px 0 0 0;
+    margin: 10px 0 0 0; 
     width: 100%;
     height: 160px;
   }
