--- a/src/style/blocks/pageFooter/topFooter.scss
+++ b/src/style/blocks/pageFooter/topFooter.scss
@@ -130,7 +130,7 @@ margin-top: 30px;
       margin-top: 47px;
     }
     &__logo {
-      margin-left: 38px;
+      margin: 0 0 4px 39px;
     }
     &__logo-link:hover {
       display: inline-block;
