--- a/src/style/blocks/pageMain/aboutUs.scss
+++ b/src/style/blocks/pageMain/aboutUs.scss
@@ -412,7 +412,8 @@
     }
     &__write{
       width: 175px;
-      margin: 37px 0px 0 0;
+      height: 52px;
+      margin: 39px 0 0 0;
     }
     &__btn-left{
       margin-right: 32px;
