--- a/src/style/blocks/pageMain/contacts.scss
+++ b/src/style/blocks/pageMain/contacts.scss
@@ -131,7 +131,8 @@ min-height: 850px;
         }
         &__btn{
             width: 230px;
-            margin: 59px 0 0 269px;
+            margin: 57px 0 0 269px;
+            height: 51px;
         }
     }
     #map{
