--- a/src/style/blocks/pageMain/catalogItems.scss
+++ b/src/style/blocks/pageMain/catalogItems.scss
@@ -42,7 +42,7 @@
       @include textLg(17px, 700);
       line-height: 1.4;
       width: 196px;
-      margin: 24px 0px 0px 27px;
+      margin: 21px 0px 0px 28px;
     }
     &__title:hover {
       opacity: 0.6;
@@ -52,11 +52,11 @@
     }
     &__descr {
       @include textLg(13px, 400);
-      margin-top: 4px;
+      margin-top: 6px;
       color: $darkGray;
       line-height: 2.3;
       margin-left: 27px;
-      padding-bottom: 18px;
+      padding-bottom: 20px;
       border-bottom: 1px solid #ececec;
       width: 204px;
     }
@@ -74,7 +74,7 @@
       @include flexbox;
       width: 204px;
       justify-content: space-between;
-      margin-left: 27px;
+      margin-left: 28px;
       &__number {
         @include textLg(15px, 700);
         line-height: 1.6;
@@ -157,7 +157,7 @@
         line-height: 1.8;
         color: $darkGray;
         order: 3;
-        margin: 12px 40px 15px 33px;
+        margin: 12px 40px 17px 33px;
       }
     }
     .player__btn {
@@ -766,8 +766,8 @@
       margin-top: 22px;
       &__img {
         width: 50%;
-        min-height: 334px;
-        min-width: 334px;
+        height: 334px;
+        width: 334px;
       }
       &__item {
         width: 100%;
@@ -775,7 +775,7 @@
         margin-top: 23px;
         border: 1px solid #ececec;
         background-color: #ffffff;
-        margin-left: 50px;
+        margin-left: 42px;
         margin-bottom: 30px;
       }
       &__detail {
@@ -787,7 +787,7 @@
         700);
         line-height: 1.2;
 
-        margin-left: 16px;
+        margin-left: 22px;
         margin-top: 26px;
 
         width: 230px;
@@ -802,15 +802,15 @@
         padding-bottom: 172px;
         border-bottom: 1px solid #ececec;
         width: 268px;
-        margin-left: 16px;
+        margin-left: 22px;
       }
       &__descr--line {
         @include textLg(15px,
         400);
         color: #444444;
         line-height: 2;
-        margin-top: 2px;
-        margin-left: 16px;
+        margin-top: 0px;
+        margin-left: 22px;
         width: 268px;
         padding-bottom: 150px;
       }
@@ -818,7 +818,7 @@
         @include flexbox;
         width: 268px;
         justify-content: space-between;
-        margin-left: 21px;
+        margin-left: 29px;
         &__number {
           @include textLg(17px,
           700);
@@ -831,7 +831,7 @@
       @include flexbox;
       min-width: 668px;
       height: 740px;
-      margin-left: 50px;
+      margin-left: 44px;
       margin-top: 22px;
       margin-bottom: 62px;
       &__description {
@@ -877,7 +877,7 @@
           400);
           order: 3;
           margin-top: 0px;
-          margin-left: 40px;
+          margin-left: 37px;
         }
       }
       .player__btn {
@@ -905,7 +905,8 @@
         700);
         background: #f1f1f1;
         line-height: 1;
-        margin-top: 40px;
+        margin-top: 42px;
+        margin-left: 8px;
       }
       &__title-line:after {
         content: "";
@@ -963,7 +964,7 @@
           padding-bottom: 13px;
           width: 256px;
           margin-left: 27px;
-          margin-top: 5px;
+          margin-top: 0px;
         }
         .catalog-price {
           margin-left: 17px;
@@ -983,7 +984,7 @@
         flex-wrap: wrap;
         flex-direction: column;
         margin-top: 27px;
-        margin-bottom: 104px;
+        margin-bottom: 100px;
         margin-left: 76px;
         &__description {
           @include flexbox;
@@ -1009,7 +1010,7 @@
           }
           &__link-pic {
             margin-top: 185px;
-            left: 32%;
+            left: 33%;
           }
           &__descr {
             @include textLg(15px,
