--- a/src/style/blocks/pageMain/contacts.scss
+++ b/src/style/blocks/pageMain/contacts.scss
@@ -66,10 +66,11 @@ min-height: 850px;
     width: 100%;
     height: 455px;
     display: block;
+    background-image: url(map-mobile-1x.jpg);
 }
-#mapImg{
-    display: none;
-}
+// #mapImg{
+//     display: none;
+// }
 @media (min-width: 768px) {
 
     .contacts {
